# lepsox

./: .claude.md  .env.example  .gitignore  README.md  SETUP_COMPLETE.md  TEST_COVERAGE_REPORT.md  lepsoc_crewai_validator.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-full.txt  requirements.txt
docs/: SPRINT_PLAN_UPDATED.md  architecture.md  inat-mcp-API_REFERENCE.md  lepsoc_validation_app_specification.md  lovable_frontend_instructions.md  sprint_plan_development_guide.md
docs/samples/: 2024-Zone8-SeasonSummary.xlsx
scripts/: run_validator.py  test_connections.py
src/lepsox/: __init__.py  config.py  validator.py
src/lepsox/agents/: __init__.py  base.py  geographic.py  metadata.py  qa_agent.py  records.py  taxonomic.py  temporal.py
src/lepsox/integrations/: __init__.py  inat.py
src/lepsox/models/: __init__.py  validation_result.py
tests/: __init__.py  conftest.py  test_agents.py
tests/fixtures/: test_with_errors.xlsx  ~$test_with_errors.xlsx
