[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lepsox"
version = "0.1.0"
authors = [
    {name = "Eric Olson", email = "eric@example.com"},
]
description = "CrewAI-powered validation system for Lepidopterist Society observation data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "crewai==0.28.8",
    "langchain>=0.1.16",
    "langchain-community>=0.0.34",
    "ollama>=0.3.0,<1",
    "mcp>=1.0.0",
    "pandas>=2.2.1",
    "openpyxl>=3.1.2",
    "numpy>=1.26.4",
    "httpx>=0.25.2",
    "aiohttp>=3.9.3",
    "python-dotenv>=1.0.0,<1.1.0",
    "python-dateutil>=2.9.0",
    "loguru>=0.7.2",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "isort>=5.13.2",
    "rich>=13.7.1",
    "click>=8.1.7",
]
full = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0.29",
    "redis>=5.0.3",
    "celery>=5.3.6",
]

[project.urls]
Homepage = "https://github.com/coloradeo/lepsox"
Issues = "https://github.com/coloradeo/lepsox/issues"
Repository = "https://github.com/coloradeo/lepsox"

[project.scripts]
lepsox-validate = "lepsox.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/lepsox --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
